# pyright-extended

./: .gitignore  .replit  Makefile  README.md  node-env.nix  node-packages.nix  package-lock.json  package.json  replit.nix  result
.github/workflows/: build.yml  mypy_primer_pr.yaml  release.yml  validation.yml
scripts/: set-metadata.sh
tests/: Makefile  README.md  pyproject.toml  shell.nix
tests/clients/: replit.json
tests/pyright_extended_tests/: __init__.py
tests/support/: print_majorminor.py
